fixed footer links in profile, hall, challenges

--- a/templates/hall_of_fame.html
+++ b/templates/hall_of_fame.html
@@ -79,16 +79,16 @@
             <p class="grey-text text-lighten-4">
               We have more than 10 companies supporting us financially and by equipment
               </br>
-              <a href="#">I want to become a sponsor</a>
+              <a class="highlight" href="#">I want to become a sponsor</a>
             </p>
 
           </div>
           <div class="col l4 offset-l2 s12">
             <h5 class="white-text">Links</h5>
             <ul>
-              <li><a class="grey-text text-lighten-3" href="#!">Location</a></li>
-              <li><a class="grey-text text-lighten-3" href="#!">Mission</a></li>
-              <li><a class="grey-text text-lighten-3" href="#!">People</a></li>
+              <li><a class="highlight" href="#!">Location</a></li>
+              <li><a class="highlight" href="#!">Mission</a></li>
+              <li><a class="highlight" href="#!">People</a></li>
             </ul>
           </div>
         </div>
