--- a/templates/profile.html
+++ b/templates/profile.html
@@ -42,7 +42,7 @@
             </div>
             <div class="row">
                   <div class="col s1 m1 l1">
-                      <i class="material-icons" style="font-size: 20px;padding-left:10%;">flash_on</i>
+                      <i class="material-icons" style="font-size: 20px;padding-left:50%;">flash_on</i>
                   </div>
                   <div class="col s9 m9 l10">
                     <div class="progress" style="background-color: #f1f1f1;width:100%;">
@@ -50,12 +50,12 @@
                     </div>
                   </div>
                   <div class="col s1 m1 l1" >
-                    <span style="color: #ffc107;margin: 0 auto;margin-right:10px;">3</span>
+                    <span style="color: #ffc107;">3</span>
                   </div>
                 </div>
                 <div class="row">
                   <div class="col s1 m1 l1">
-                      <i class="material-icons" style="font-size: 20px;padding-left:10%">computer</i>
+                      <i class="material-icons" style="font-size: 20px;padding-left:50%">computer</i>
                   </div>
                   <div class="col s9 m19 l10">
                     <div class="progress" style="background-color: #f1f1f1;width:100%">
@@ -63,7 +63,7 @@
                     </div>
                   </div>
                   <div class="col s1 m1 l1">
-                    <span style="color:#3498db;margin:0 auto;margin-right:10px;">7</span>
+                    <span style="color:#3498db;">7</span>
                   </div>
                 </div>
           </div>
@@ -84,16 +84,16 @@
                 <p class="grey-text text-lighten-4">
                   We have more than 10 companies supporting us financially and by equipment
                 <br>
-                <a href="#">I want to become a sponsor</a>
+                <a class="highlight" href="#">I want to become a sponsor</a>
               </p>
 
             </div>
             <div class="col l4 offset-l2 s12">
               <h5 class="white-text">Links</h5>
               <ul>
-                <li><a class="grey-text text-lighten-3" href="#!">Location</a></li>
-                <li><a class="grey-text text-lighten-3" href="#!">Mission</a></li>
-                <li><a class="grey-text text-lighten-3" href="#!">People</a></li>
+                <li><a class="highlight" href="#!">Location</a></li>
+                <li><a class="highlight" href="#!">Mission</a></li>
+                <li><a class="highlight" href="#!">People</a></li>
               </ul>
             </div>
           </div>
