Fixed front page map text when scaling

--- a/templates/index.html
+++ b/templates/index.html
@@ -122,7 +122,7 @@
     </div>
     <!-- SVG START -->
 
-    <div class="container white-text" id="svgtext">
+    <div class="container white-text" id="svgtext" style="font-size: 4vw;">
       <div class="row">
         <div class="col s1">Office 21m<sup>2</sup></div>
         <div class="col s1">&nbsp;</div>
@@ -140,7 +140,7 @@
       </div>
     </div>
 
-    <div class="container">
+    <div class="container" style="width:100%">
 
       <!-- SVG START -->
       <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
@@ -252,7 +252,7 @@
 
     </div>
 
-    <div class="container white-text" id="svgtext">
+    <div class="container white-text" id="svgtext" style="font-size: 2vw;">
       <div class="row">
         <div class="col s1">Servers</div>
         <div class="col s2">3D printers, lasercutter, soldering</div>
