Fixed index.html again

--- a/templates/index.html
+++ b/templates/index.html
@@ -122,25 +122,25 @@
     </div>
     <!-- SVG START -->
 
-    <div class="container white-text" id="svgtext" style="font-size: 4vw;">
+    <div class="container white-text" id="svgtext" >
       <div class="row">
-        <div class="col s1">Office 21m<sup>2</sup></div>
-        <div class="col s1">&nbsp;</div>
-        <div class="col s1">Lockers</div>
-        <div class="col s1">&nbsp;</div>
-        <div class="col s1">&nbsp;</div>
-        <div class="col s1">Office 15m<sup>2</sup></div>
+        <div class="col s1" style="font-size: 1.5vw;">Office 21m<sup>2</sup></div>
+        <div class="col s1" >&nbsp;</div>
+        <div class="col s1" style="font-size: 1.5vw;">Lockers</div>
         <div class="col s1">&nbsp;</div>
         <div class="col s1">&nbsp;</div>
-        <div class="col s1">More lockers</div>
+        <div class="col s1" style="font-size: 1.5vw;">Office 15m<sup>2</sup></div>
         <div class="col s1">&nbsp;</div>
-        <div class="col s1">Office 20m<sup>2</sup></div>
+        <div class="col s1">&nbsp;</div>
+        <div class="col s1" style="font-size: 1.5vw;">More lockers</div>
+        <div class="col s1">&nbsp;</div>
+        <div class="col s1" style="font-size: 1.5vw;">Office 20m<sup>2</sup></div>
         <div class="col s1">&nbsp;</div>
 
       </div>
     </div>
 
-    <div class="container" style="width:100%">
+    <div class="container">
 
       <!-- SVG START -->
       <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
@@ -252,18 +252,18 @@
 
     </div>
 
-    <div class="container white-text" id="svgtext" style="font-size: 2vw;">
+    <div class="container white-text" id="svgtext">
       <div class="row">
-        <div class="col s1">Servers</div>
-        <div class="col s2">3D printers, lasercutter, soldering</div>
-        <div class="col s2">CNC machine, saw, lathe, mill</div>
-        <div class="col s2">Kitchen, toilet, sauna</div>
+        <div class="col s1" style="font-size: 1.5vw;">Servers</div>
+        <div class="col s2" style="font-size: 1.5vw;">3D printers, lasercutter, soldering</div>
+        <div class="col s2" style="font-size: 1.5vw;">CNC machine, saw, lathe, mill</div>
+        <div class="col s2" style="font-size: 1.5vw;">Kitchen, toilet, sauna</div>
 
-        <div class="col s1">&nbsp;</div>
-        <div class="col s1">Meeting room</div>
-        <div class="col s1">Lounge</div>
-        <div class="col s1">&nbsp;</div>
-        <div class="col s1">&nbsp;</div>
+        <div class="col s1" style="font-size: 1.5vw;">&nbsp;</div>
+        <div class="col s1" style="font-size: 1.5vw;">Meeting room</div>
+        <div class="col s1" style="font-size: 1.5vw;">Lounge</div>
+        <div class="col s1" style="font-size: 1.5vw;">&nbsp;</div>
+        <div class="col s1" style="font-size: 1.5vw;">&nbsp;</div>
       </div>
     </div>
   </div>
