--- a/templates/index.html
+++ b/templates/index.html
@@ -74,7 +74,7 @@
           </div>
         </div>
 
-        <a href="#" class="btn-large amber hide-on-med-and-up">equipment</a>
+        <a href="#" class="btn-large amber hide-on-med-and-up">to equipment</a>
 
       </div>
     </div>
