front page paddings

--- a/templates/index.html
+++ b/templates/index.html
@@ -97,7 +97,7 @@
     </div>
   </div>
 
-  <div class="row container center-align hide-on-small-only" style="margin-bottom: 30px;">
+  <div class="row container center-align hide-on-small-only" style="margin-bottom: 45px;">
     <div class="col s12 m4">
       <a class="btn-large blue" href="/challenges">to ideas</a>
     </div>
@@ -271,7 +271,7 @@
 
   <!-- SVG END -->
   <div class="container black-text">
-    <div class="row">
+    <div class="row" style="margin-top: 32px">
       <div class="col s12 m6">
         <h2 class="">Challenges</h2>
       </div>
