--- a/templates/challenge.html
+++ b/templates/challenge.html
@@ -1,126 +1,55 @@
-<!DOCTYPE html>
-<html>
+{% extends 'base.html' %}
+{% block content %}
+  <div class="row container">
+    <div class="row">
+      <div class="col m8">
+        <h3 class="">{{ challenge.name }}</h3>
 
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0" />
-  <title>k-space</title>
-  <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" href="/static/css/materialize.min.css">
-  <link rel="stylesheet" href="/static/css/app.css">
-</head>
-
-<body>
-  <div id="container" class="grey lighten-4">
-
-    <div class="header section center-align">
-      <h1 class="section darken-2 z-depth-1 white-text"><a href="/">k-space.ee</a></h1>
-    </div>
-
-    <div class="row container">
-
-      <div class="row">
-
-        <div class="col m8">
-          <h3 class="">{{ challenge.name }}</h3>
-
-          <div>
-            {% for tag in challenge.tags.all %}
-              <div class="chip">{{ tag.name }}</div>
-            {% endfor %}
-          </div>
-
-          <p style="">{{ challenge.description }}
-          </p>
-
-          <div class="section">
-
-            <p>I am usually at k-space on weekends. Come and take a look.</p>
-
-            <div class="valign-wrapper"><i class="material-icons">email</i>&nbsp; eric.cartman@email.com</div>
-            <br>
-            <div class="valign-wrapper"><i class="material-icons">phone</i>&nbsp;55 55 5555</div>
-          </div>
-
+        <div>
+          {% for tag in challenge.tags.all %}
+            <div class="chip">{{ tag.name }}</div>
+          {% endfor %}
         </div>
 
-        <div class="col m4">
+        <p style="">{{ challenge.description }}
+        </p>
 
-          <ul class="collection">
-            <li class="collection-item avatar">
-              <img src="https://vignette.wikia.nocookie.net/southpark/images/0/0d/1a.jpg/revision/latest/scale-to-width-down/310?cb=20100826182516" alt="" class="circle">
-              <span class="title">Author</span>
-              <p><b>{{ challenge.creator.username }}</b></p>
-            </li>
-            <li class="collection-item">
-              <span class="title">Programming</span>
-            </li>
-            <li class="collection-item">
-              <span class="title">Soldering</span>
-            </li>
-          </ul>
-
-          <ul class="collection with-header">
-            <li class="collection-header">
-              <span class="title"><b>What we need</b></span>
-            </li>
-            <li class="collection-item">
-              <span class="">CNC bench experience</span>
-            </li>
-            <li class="collection-item">
-              <span class="title">Screwdriver</span>
-            </li>
-          </ul>
-
-        </div>
-
-      </div>
-
-    </div>
-
-    <!-- dashboard custom -->
-
-    <footer class="page-footer">
-      <div class="container">
-        <div class="row">
-          <div class="col l6 s12">
-            <h5 class="white-text">Contact</h5>
-            <p class="grey-text text-lighten-4">
-              <i class="material-icons">phone</i>&nbsp;Call Lauri 55 55 5555
-            </p>
-
-            <h5 class="white-text">Sponsors</h5>
-            <p class="grey-text text-lighten-4">
-              We have more than 10 companies supporting us financially and by equipment
-              </br>
-              <a class="highlight" href="#">I want to become a sponsor</a>
-            </p>
-
-          </div>
-          <div class="col l4 offset-l2 s12">
-            <h5 class="white-text">Links</h5>
-            <ul>
-              <li><a class="highlight" href="#!">Location</a></li>
-              <li><a class="highlight" href="#!">Mission</a></li>
-              <li><a class="highlight" href="#!">People</a></li>
-            </ul>
-          </div>
+        <div class="section">
+          <p>I am usually at k-space on weekends. Come and take a look.</p>
+          <div class="valign-wrapper"><i class="material-icons">email</i>&nbsp; eric.cartman@email.com</div>
+          <br>
+          <div class="valign-wrapper"><i class="material-icons">phone</i>&nbsp;55 55 5555</div>
         </div>
       </div>
-      <div class="footer-copyright">
-        <div class="container">
-        © 2017 k-space
-        <!-- <a class="grey-text text-lighten-4 right" href="#!">More Links</a> -->
-        </div>
+
+      <div class="col m4">
+        <ul class="collection">
+          <li class="collection-item avatar">
+            <img src="https://vignette.wikia.nocookie.net/southpark/images/0/0d/1a.jpg/revision/latest/scale-to-width-down/310?cb=20100826182516"
+                 alt="" class="circle">
+            <span class="title">Author</span>
+            <p><b>{{ challenge.creator.username }}</b></p>
+          </li>
+          <li class="collection-item">
+            <span class="title">Programming</span>
+          </li>
+          <li class="collection-item">
+            <span class="title">Soldering</span>
+          </li>
+        </ul>
+
+        <ul class="collection with-header">
+          <li class="collection-header">
+            <span class="title"><b>What we need</b></span>
+          </li>
+          <li class="collection-item">
+            <span class="">CNC bench experience</span>
+          </li>
+          <li class="collection-item">
+            <span class="title">Screwdriver</span>
+          </li>
+        </ul>
       </div>
-      </footer>
     </div>
   </div>
-
-  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
-  <script src="/static/js/app.js"></script>
-</body>
-
-</html>
+{% endblock %}
