--- a/templates/hall_of_fame.html
+++ b/templates/hall_of_fame.html
@@ -1,110 +1,48 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0" />
-  <title>k-space</title>
-  <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" href="/static/css/materialize.min.css">
-  <link rel="stylesheet" href="/static/css/app.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-</head>
-
-<body>
-  <div id="container" class="grey lighten-4">
-
-    <div class="header section center-align">
-      <h1 class="section z-depth-1 white-text"><a href="/">k-space.ee</a></h1>
+{% extends 'base.html' %}
+{% block content %}
+  <div class="row container">
+    <div class="section slogan">
+      <h2 class="center-align" style="font-weight:bold">Hall of Fame<br></h2>
     </div>
+  </div>
 
-    <!-- landing page custom -->
-
-    <div class="row container">
-      <div class="section slogan">
-        <h2 class="center-align" style="font-weight:bold">Hall of Fame<br></h2>
-      </div>
-    </div>
-
-    <!-- ideas solution success -->
-    <div class="row container section">
-      {% for user in users %}
-        <div class="col s12 m4">
-          <div class="section center-align">
-            <div class="card">
-              <div class="card-content white-text">
-                <div class="card-image">
-                    <a href="/profile/{{ user.username }}"><img src='/media/{{ user.profile.icon }}'></a>
+  <div class="row container section">
+    {% for user in users %}
+      <div class="col s12 m4">
+        <div class="section center-align">
+          <div class="card">
+            <div class="card-content white-text">
+              <div class="card-image">
+                <a href="/profile/{{ user.username }}"><img src='/media/{{ user.profile.icon }}'></a>
+              </div>
+              <h5 class="card-title" style="padding-top: 10px;color:black;"><a class='darklink'
+                                                                               href="/profile/{{ user.username }}"><b>{{ user.username }}</b></a>
+              </h5>
+              <div class="row">
+                <div class="col s12 m1">
+                  <i class="material-icons" style="font-size: 20px; padding-right: 5px; color: black">flash_on</i>
                 </div>
-                  <h5 class="card-title" style="padding-top: 10px;color:black;"><a class='namelink' href="/profile/{{ user.username }}"><b>{{ user.username }}</b></a></h5>
-                  <div class="row">
-                    <div class="col s12 m1">
-                        <i class="material-icons" style="font-size: 20px; padding-right: 5px; color: black">flash_on</i>
-                    </div>
-                    <div class="col s12 m10">
-                        <div class="progress" style="background-color: #f1f1f1">
-                            <div class="determinate" style="width: 70%; background-color:#ffc107;"></div>
-                        </div>
-                    </div>
+                <div class="col s12 m10">
+                  <div class="progress" style="background-color: #f1f1f1">
+                    <div class="determinate" style="width: 70%; background-color:#ffc107;"></div>
                   </div>
+                </div>
+              </div>
 
-                <div class="row">
-                    <div class="col s12 m1">
-                      <i class="material-icons" style="font-size: 20px; padding-right: 5px; color: black">computer</i>
-                    </div>
-                    <div class="col s12 m10">
-                        <div class="progress" style="background-color: #f1f1f1">
-                            <div class="determinate" style="width: 70%; background-color:#3498db;"></div>
-                        </div>
-                    </div>
+              <div class="row">
+                <div class="col s12 m1">
+                  <i class="material-icons" style="font-size: 20px; padding-right: 5px; color: black">computer</i>
+                </div>
+                <div class="col s12 m10">
+                  <div class="progress" style="background-color: #f1f1f1">
+                    <div class="determinate" style="width: 70%; background-color:#3498db;"></div>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
-      {% endfor %}
-    </div>
-
-    <footer class="page-footer">
-      <div class="container">
-        <div class="row">
-          <div class="col l6 s12">
-            <h5 class="white-text">Contact</h5>
-            <p class="grey-text text-lighten-4">
-              <i class="material-icons">phone</i>&nbsp;Call Lauri 55 55 5555
-            </p>
-
-            <h5 class="white-text">Sponsors</h5>
-            <p class="grey-text text-lighten-4">
-              We have more than 10 companies supporting us financially and by equipment
-              </br>
-              <a class="highlight" href="#">I want to become a sponsor</a>
-            </p>
-
-          </div>
-          <div class="col l4 offset-l2 s12">
-            <h5 class="white-text">Links</h5>
-            <ul>
-              <li><a class="highlight" href="#!">Location</a></li>
-              <li><a class="highlight" href="#!">Mission</a></li>
-              <li><a class="highlight" href="#!">People</a></li>
-            </ul>
-          </div>
-        </div>
       </div>
-      <div class="footer-copyright">
-        <div class="container">
-        © 2017 k-space
-        <!-- <a class="grey-text text-lighten-4 right" href="#!">More Links</a> -->
-        </div>
-      </div>
-    </footer>
+    {% endfor %}
   </div>
-
-  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
-  <script src="/static/js/app.js"></script>
-</body>
-
-</html>
+{% endblock %}
