--- a/templates/index.html
+++ b/templates/index.html
@@ -1,18 +1,9 @@
-<!DOCTYPE html>
-<html>
-
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
-  <title>k-space</title>
-  <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" href="/static/css/materialize.min.css">
   <link rel="stylesheet" href="/static/css/index.css">
 </head>
 
-<body>
-<div id="container" class="grey lighten-4">
+{% extends 'base_footer.html' %}
+{% block base_footer %}
 
   <div class="headerblock section">
 
@@ -110,7 +101,6 @@
   </div>
 
   <div class="section map z-depth-1">
-
     <div class="container white-text">
       <h2 class="">We have</h2>
       <div class="row section">
@@ -124,17 +114,17 @@
 
     <div class="container white-text" id="svgtext" >
       <div class="row">
-        <div class="col s1" style="font-size: 1.5vw;">Office 21m<sup>2</sup></div>
-        <div class="col s1" >&nbsp;</div>
-        <div class="col s1" style="font-size: 1.5vw;">Lockers</div>
+        <div class="col s1">Office 21m<sup>2</sup></div>
+        <div class="col s1">&nbsp;</div>
+        <div class="col s1">Lockers</div>
         <div class="col s1">&nbsp;</div>
         <div class="col s1">&nbsp;</div>
-        <div class="col s1" style="font-size: 1.5vw;">Office 15m<sup>2</sup></div>
+        <div class="col s1">Office 15m<sup>2</sup></div>
         <div class="col s1">&nbsp;</div>
         <div class="col s1">&nbsp;</div>
-        <div class="col s1" style="font-size: 1.5vw;">More lockers</div>
+        <div class="col s1">More lockers</div>
         <div class="col s1">&nbsp;</div>
-        <div class="col s1" style="font-size: 1.5vw;">Office 20m<sup>2</sup></div>
+        <div class="col s1">Office 20m<sup>2</sup></div>
         <div class="col s1">&nbsp;</div>
 
       </div>
@@ -254,16 +244,16 @@
 
     <div class="container white-text" id="svgtext">
       <div class="row">
-        <div class="col s1" style="font-size: 1.5vw;">Servers</div>
-        <div class="col s2" style="font-size: 1.5vw;">3D printers, lasercutter, soldering</div>
-        <div class="col s2" style="font-size: 1.5vw;">CNC machine, saw, lathe, mill</div>
-        <div class="col s2" style="font-size: 1.5vw;">Kitchen, toilet, sauna</div>
+        <div class="col s1">Servers</div>
+        <div class="col s2">3D printers, lasercutter, soldering</div>
+        <div class="col s2">CNC machine, saw, lathe, mill</div>
+        <div class="col s2">Kitchen, toilet, sauna</div>
 
-        <div class="col s1" style="font-size: 1.5vw;">&nbsp;</div>
-        <div class="col s1" style="font-size: 1.5vw;">Meeting room</div>
-        <div class="col s1" style="font-size: 1.5vw;">Lounge</div>
-        <div class="col s1" style="font-size: 1.5vw;">&nbsp;</div>
-        <div class="col s1" style="font-size: 1.5vw;">&nbsp;</div>
+        <div class="col s1">&nbsp;</div>
+        <div class="col s1">Meeting room</div>
+        <div class="col s1">Lounge</div>
+        <div class="col s1">&nbsp;</div>
+        <div class="col s1">&nbsp;</div>
       </div>
     </div>
   </div>
@@ -295,7 +285,7 @@
 
             <div class="card-content">
               <div class="card-title">{{ challenge.name }}</div>
-              <p style="text-align: justify; max-height: 160px; overflow: auto;">{{ challenge.description }}</p>
+              <p style="text-align: justify; max-height: 120px; overflow: auto;">{{ challenge.description }}</p>
               </br>
               <div>
                 {% for tag in challenge.tags.all %}
@@ -317,48 +307,4 @@
   </div>
 
   <br>
-
-  <footer class="page-footer">
-    <div class="container">
-      <div class="row">
-        <div class="col l6 s12">
-          <h5 class="white-text">Contact</h5>
-          <p class="grey-text text-lighten-4">
-            <i class="material-icons">phone</i>&nbsp;Call Lauri 55 55 5555
-          </p>
-
-          <h5 class="white-text">Sponsors</h5>
-          <p class="grey-text text-lighten-4">
-            We have more than 10 companies supporting us financially and by equipment
-            </br>
-            <a class="highlight" href="#">I want to become a sponsor</a>
-          </p>
-
-        </div>
-        <div class="col l4 offset-l2 s12">
-          <h5 class="white-text">Links</h5>
-          <ul>
-            <li><a class="highlight" href="#!">Mission</a></li>
-            <li><a class="highlight" href="#!">People</a></li>
-          </ul>
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1015.5421689053422!2d24.659768056865254!3d59.39830538168295!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x469295abf80677bd%3A0x89a6e8a5671f608b!2sAkadeemia+tee+21%2F1%2C+12618+Tallinn!5e0!3m2!1set!2see!4v1507405326247"
-                  width="350" height="200" frameborder="0" style="border:0" allowfullscreen></iframe>
-        </div>
-      </div>
-    </div>
-    <div class="footer-copyright">
-      <div class="container">
-        © 2017 k-space
-        <!-- <a class="grey-text text-lighten-4 right" href="#!">More Links</a> -->
-      </div>
-    </div>
-  </footer>
-
-</div>
-
-<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
-<script src="/static/js/app.js"></script>
-</body>
-
-</html>
+{% endblock %}
