Lauri's temporary logo

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,10 +13,11 @@
     <div class="fadeimage" style="background-image:url('https://owncloud.koodur.com/index.php/apps/gallery/preview.public/1055905?width=2600&height=2600&c=a635e088958188e4490b17a91602366a&requesttoken=TGJTDncMBCtJEG40Djt9HSUBIykoWn4bNwQpP09YAx4%3D%3A85kCFd3z8QYaaAKggYmQi%2F0mtMcmz7iSGQBOmq84Z50%3D&token=j0HUdRNEaZ37wGE')"></div> -->
 
     <div class="header center-align z-depth-1 section">
-      <h1 class="">k-space.ee</h1>
+      {% include 'logo.svg' %}
+      <!--<h1 class="">k-space.ee</h1>
       <div class="slogan">
         <h5 class="center-align">Community-driven space for bringing your tech dreams to life</h5>
-      </div>
+      </div>-->
     </div>
 
     <br/><br/><br/>
