Added inventory view and challenge blurb + recurring field

--- a/templates/index.html
+++ b/templates/index.html
@@ -66,7 +66,7 @@
           </div>
         </div>
 
-        <a href="#" class="btn-large amber hide-on-med-and-up">to equipment</a>
+        <a href="/inventory" class="btn-large amber hide-on-med-and-up">to equipment</a>
 
       </div>
     </div>
@@ -94,7 +94,7 @@
       <a class="btn-large blue" href="/challenges">to ideas</a>
     </div>
     <div class="col s12 m4">
-      <a href="#" class="btn-large amber ">to equipment</a>
+      <a href="/inventory" class="btn-large amber ">to equipment</a>
     </div>
     <div class="col s12 m4">
       <a href="/halloffame" class="btn-large green ">to success</a>
