Separate map and correct room usage

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,11 +13,10 @@
     <div class="fadeimage" style="background-image:url('https://owncloud.koodur.com/index.php/apps/gallery/preview.public/1055905?width=2600&height=2600&c=a635e088958188e4490b17a91602366a&requesttoken=TGJTDncMBCtJEG40Djt9HSUBIykoWn4bNwQpP09YAx4%3D%3A85kCFd3z8QYaaAKggYmQi%2F0mtMcmz7iSGQBOmq84Z50%3D&token=j0HUdRNEaZ37wGE')"></div> -->
 
     <div class="header center-align z-depth-1 section">
-      {% include 'logo.svg' %}
-      <!--<h1 class="">k-space.ee</h1>
+      <h1 class="">k-space.ee</h1>
       <div class="slogan">
         <h5 class="center-align">Community-driven space for bringing your tech dreams to life</h5>
-      </div>-->
+      </div>
     </div>
 
     <br/><br/><br/>
@@ -66,7 +65,7 @@
           </div>
         </div>
 
-        <a href="/inventory" class="btn-large amber hide-on-med-and-up">to equipment</a>
+        <a href="#" class="btn-large amber hide-on-med-and-up">to equipment</a>
 
       </div>
     </div>
@@ -127,134 +126,21 @@
         <div class="col s1">&nbsp;</div>
         <div class="col s1">Office 20m<sup>2</sup></div>
         <div class="col s1">&nbsp;</div>
-
       </div>
     </div>
 
     <div class="container">
-
-      <!-- SVG START -->
-      <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	         viewBox="0 0 802.7 239.1" style="enable-background:new 0 0 802.7 239.1;" xml:space="preserve">
-        <style type="text/css">
-	        .st0 {
-            fill: #26719B;
-            stroke: #34495E;
-            stroke-width: 5;
-            stroke-miterlimit: 10;
-          }
-
-          .st1 {
-            fill: #3498DB;
-            stroke: #34495E;
-            stroke-width: 5;
-            stroke-miterlimit: 10;
-          }
-
-          .st2 {
-            fill: #ECF0F1;
-            stroke: #ECF0F1;
-            stroke-miterlimit: 10;
-          }
-
-          .st3 {
-            fill: #ECF0F1;
-            stroke: #ECF0F1;
-            stroke-width: 0.5;
-            stroke-miterlimit: 10;
-          }
-
-          .st4 {
-            fill: none;
-            stroke: #ECF0F1;
-            stroke-miterlimit: 10;
-          }
-        </style>
-        <g id="bg">
-        </g>
-        <g id="Layer_1">
-	        <g id="XMLID_20_">
-		        <rect id="XMLID_14_" x="67.2" y="70.6" class="st0" width="265.8" height="29.8"/>
-		        <rect id="XMLID_16_" x="399.4" y="70.6" class="st0" width="265.8" height="29.8"/>
-	        </g>
-	        <g id="XMLID_17_">
-		        <rect id="XMLID_1_" x="0" y="100.9" class="st1" width="333" height="40.2"/>
-		        <rect id="XMLID_4_" x="67.2" y="141.2" class="st1" width="66.4" height="66.4"/>
-		        <rect id="XMLID_5_" x="0" y="176.4" class="st1" width="67.2" height="31.2"/>
-		        <rect id="XMLID_6_" x="133.6" y="141.2" class="st1" width="66.4" height="66.4"/>
-		        <rect id="XMLID_7_" x="333" y="141.2" class="st1" width="66.4" height="66.4"/>
-		        <polygon id="XMLID_3_" class="st1" points="33.6,100.4 0,100.4 0,46.3 14.3,31.5 33.6,31.5 		"/>
-		        <rect id="XMLID_2_" x="398.9" y="100.4" class="st1" width="265.8" height="40.2"/>
-		        <rect id="XMLID_13_" x="531.8" y="140.6" class="st1" width="66.4" height="66.4"/>
-		        <rect id="XMLID_11_" x="598.3" y="140.6" class="st1" width="66.4" height="66.4"/>
-		        <polygon id="XMLID_8_" class="st1" points="698.3,100.4 664.7,100.4 664.7,46.3 679,31.5 698.3,31.5 		"/>
-		        <rect id="XMLID_10_" x="333" y="100.9" class="st1" width="66.4" height="40.2"/>
-		        <polygon id="XMLID_12_" class="st1" points="365.3,100.4 398.9,100.4 398.9,46.3 384.6,31.5 365.3,31.5 		"/>
-		        <polygon id="XMLID_9_" class="st1" points="769.2,207.1 732.2,207.1 732.2,140.6 664.7,140.6 664.7,100.4 769.2,100.4 		"/>
-	        </g>
-        </g>
-        <g id="jooned">
-	        <g id="XMLID_212_">
-		        <line id="XMLID_214_" class="st2" x1="16.3" y1="65.9" x2="16.3" y2="0"/>
-		        <ellipse id="XMLID_213_" class="st3" cx="16.3" cy="65.9" rx="4" ry="3.9"/>
-	        </g>
-	        <g id="XMLID_209_">
-		        <line id="XMLID_211_" class="st2" x1="166" y1="121.1" x2="166" y2="-0.2"/>
-		        <ellipse id="XMLID_210_" class="st3" cx="166" cy="121.1" rx="4" ry="3.9"/>
-	        </g>
-	        <g id="XMLID_206_">
-		        <line id="XMLID_208_" class="st2" x1="565" y1="120.6" x2="565" y2="-0.7"/>
-		        <ellipse id="XMLID_207_" class="st3" cx="565" cy="120.6" rx="4" ry="3.9"/>
-	        </g>
-	        <g id="XMLID_203_">
-		        <polyline id="XMLID_205_" class="st4" points="382.1,66 348.6,66 348.6,0 		"/>
-		        <ellipse id="XMLID_204_" class="st3" cx="382.1" cy="66" rx="3.9" ry="4"/>
-	        </g>
-	        <g id="XMLID_200_">
-		        <line id="XMLID_202_" class="st2" x1="681.5" y1="65.7" x2="681.5" y2="-0.2"/>
-		        <ellipse id="XMLID_201_" class="st3" cx="681.5" cy="65.7" rx="4" ry="3.9"/>
-	        </g>
-	        <g id="XMLID_197_">
-		        <line id="XMLID_199_" class="st2" x1="33.1" y1="191.4" x2="33.1" y2="239.1"/>
-		        <ellipse id="XMLID_198_" class="st3" cx="33.1" cy="191.4" rx="4" ry="3.9"/>
-	        </g>
-	        <g id="XMLID_194_">
-		        <line id="XMLID_196_" class="st2" x1="99.9" y1="174.1" x2="99.9" y2="239.1"/>
-		        <ellipse id="XMLID_195_" class="st3" cx="99.9" cy="173.8" rx="4" ry="3.9"/>
-	        </g>
-	        <g id="XMLID_191_">
-		        <polyline id="XMLID_193_" class="st4" points="166.8,174.4 230.9,174.4 230.9,239.1 		"/>
-		        <ellipse id="XMLID_192_" class="st3" cx="166.8" cy="174.4" rx="3.9" ry="4"/>
-	        </g>
-	        <g id="XMLID_188_">
-		        <line id="XMLID_190_" class="st2" x1="365.7" y1="173.8" x2="365.7" y2="239.2"/>
-		        <ellipse id="XMLID_189_" class="st3" cx="365.7" cy="173.8" rx="4" ry="3.9"/>
-	        </g>
-	        <g id="XMLID_185_">
-		        <line id="XMLID_187_" class="st2" x1="565" y1="173.8" x2="565" y2="239.1"/>
-		        <ellipse id="XMLID_186_" class="st3" cx="565" cy="173.8" rx="4" ry="3.9"/>
-	        </g>
-	        <g id="XMLID_182_">
-		        <line id="XMLID_184_" class="st2" x1="631.5" y1="173.8" x2="631.5" y2="239.1"/>
-		        <ellipse id="XMLID_183_" class="st3" cx="631.5" cy="173.8" rx="4" ry="3.9"/>
-	        </g>
-        </g>
-        </svg>
-
+      {% include "map.svg" %}
     </div>
 
     <div class="container white-text" id="svgtext">
       <div class="row">
-        <div class="col s1">Servers</div>
-        <div class="col s2">3D printers, lasercutter, soldering</div>
-        <div class="col s2">CNC machine, saw, lathe, mill</div>
+        <div class="col s1">Hangout area</div>
+        <div class="col s2">Lounge, PC-s, IoT lab</div>
+        <div class="col s2">Meeting room</div>
         <div class="col s2">Kitchen, toilet, sauna</div>
-
-        <div class="col s1">&nbsp;</div>
-        <div class="col s1">Meeting room</div>
-        <div class="col s1">Lounge</div>
-        <div class="col s1">&nbsp;</div>
-        <div class="col s1">&nbsp;</div>
+        <div class="col s2">Soldering irons, reflow oven, robotics lab</div>
+        <div class="col s3">CNC machine, saw, lathe, mill, 3D printers, lasercutter</div>
       </div>
     </div>
   </div>
