--- a/templates/base_footer.html
+++ b/templates/base_footer.html
@@ -19,25 +19,26 @@
           <div class="col l6 s12">
             <h5 class="white-text">Contact</h5>
             <p class="grey-text text-lighten-4">
-              <i class="material-icons">phone</i> Phone: +372 5332 9412
-              <br>
-              <i class="material-icons">email</i> Email: lauri.vosandi@gmail.com
+              <i class="material-icons">person</i> Lauri Võsandi<br/>
+              <i class="material-icons">phone</i> +372 5332 9412<br/>
+              <i class="material-icons">email</i> lauri.vosandi@gmail.com
             </p>
 
-            <h5 class="white-text">Sponsors</h5>
+            <h5 class="white-text">Partners</h5>
             <p class="grey-text text-lighten-4">
-              We have more than 10 companies supporting us financially and by equipment
-              </br>
-              <a class="highlight" href="#">I want to become a sponsor</a>
+              <ul>
+                <li>Thorgate</li>
+                <li>Stork Drives</li>
+                <li>Tallinn University of Technology</li>
+                <li>3D Partner</li>
+              </ul>
+              Contact us if you want to become a sponsor
             </p>
 
           </div>
           <div class="col l4 offset-l2 s12">
             <h5 class="white-text">Links</h5>
-            <ul>
-              <li><a class="highlight" href="#!">Mission</a></li>
-              <li><a class="highlight" href="#!">People</a></li>
-            </ul>
+            <p>We're located at Akadeemia tee 21/1, fifth floor. You can take elevator to 4th floor and then take stairs to the 5th</p>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1015.5421689053422!2d24.659768056865254!3d59.39830538168295!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x469295abf80677bd%3A0x89a6e8a5671f608b!2sAkadeemia+tee+21%2F1%2C+12618+Tallinn!5e0!3m2!1set!2see!4v1507405326247"
                     width="350" height="200" frameborder="0" style="border:0" allowfullscreen></iframe>
           </div>
@@ -45,8 +46,7 @@
       </div>
       <div class="footer-copyright">
         <div class="container">
-          © 2017 k-space
-          <!-- <a class="grey-text text-lighten-4 right" href="#!">More Links</a> -->
+          © 2017 k-space.ee
         </div>
       </div>
     </footer>
